compressed header image. stopped image stretch. fixed alignment of footer

--- a/styles/article.css
+++ b/styles/article.css
@@ -42,7 +42,6 @@ header a:visited {
 main {
     position: relative;
     /* padding: 5%; */
-    padding: 2em;
     padding: 2rem;
     margin-left: auto;
     margin-right: auto;
